<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SecondScreenFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="top">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <android.widget.Button
                    android:id="@+id/depression_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:background="@drawable/depression_button_icon"
                    android:text="@string/depression_button" />

                <android.widget.Button
                    android:id="@+id/stress_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/stress_button_icon"
                    android:padding="10dp"
                    android:text="@string/stress_button" />

                <android.widget.Button
                    android:id="@+id/anxiety_button1"
                    android:padding="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/anxiety_button_icon"
                    android:text="@string/anxiety_button" />

                <android.widget.Button
                    android:id="@+id/self_esteem_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:background="@drawable/self_esteem_button_icon"
                    android:text="@string/self_esteem_button" />

                <android.widget.Button
                    android:id="@+id/more_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:background="@drawable/more_button_icon"
                    android:text="@string/more_button" />
            </LinearLayout>
        </HorizontalScrollView>
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            app:layout_anchorGravity="center"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="300dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    app:shapeAppearance="@style/boxLook"
                    android:background="@drawable/depression_box"
                    android:layout_height="wrap_content"
                    android:minHeight="400dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">


                        <TextView
                            android:id="@+id/sec_dep_depression_text"
                            android:layout_marginTop="25dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/depression_button"
                            android:textColor="@android:color/white"
                            android:textSize="30sp" />
                        <TextView
                            android:id="@+id/sec__dep_assessment_text"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/sec_dep_depression_text"
                            android:text="Get an Assessment"
                            android:textSize="20sp"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/sec_dep_content_text"
                            android:layout_marginTop="15dp"
                            android:textSize="20sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_below="@+id/sec__dep_assessment_text"
                            android:text="@string/sec_dep_cont_text"
                            android:textColor="@android:color/white" />

                        <android.widget.Button
                            android:layout_below="@+id/sec_dep_content_text"
                            android:layout_width="match_parent"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:background="@drawable/learn_more_button"
                            android:layout_height="wrap_content"
                            android:text="@string/learn_more" />

                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="300dp"
                    android:background="@drawable/depression_box"
                    android:layout_height="wrap_content"
                    android:minHeight="400dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">


                        <TextView
                            android:id="@+id/sec_str_stress_text"
                            android:layout_marginTop="25dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/depression_button"
                            android:textColor="@android:color/white"
                            android:textSize="30sp" />
                        <TextView
                            android:id="@+id/sec__str_assessment_text"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/sec_str_stress_text"
                            android:text="Get an Assessment"
                            android:textSize="20sp"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/sec_str_content_text"
                            android:layout_marginTop="15dp"
                            android:textSize="20sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_below="@+id/sec__str_assessment_text"
                            android:text="@string/sec_dep_cont_text"
                            android:textColor="@android:color/white" />

                        <Button
                            android:layout_below="@+id/sec_str_content_text"
                            android:layout_width="match_parent"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:background="@drawable/learn_more_button"
                            android:layout_height="wrap_content"
                            android:text="@string/learn_more" />




                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>


        </HorizontalScrollView>




    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>